# gpio-build-monitor

./: .gitignore  .pre-commit-config.yaml  .talismanrc  CHANGELOG.md  Makefile  README.md  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
deploy/: env.example  gpio-build-monitor-update.service  gpio-build-monitor-update.timer  gpio-build-monitor.service  sudoers-gpio-build-monitor
docs/: configuration.md  development.md  getting-started.md  hardware.md  raspberry-pi.md
monitor/: __main__.py  app.py  build_monitor.py  config.py  integrations.example.json  log_handler.py
monitor/ci_gateway/: circleci.py  constants.py  github.py  integration_actions.py
monitor/gpio/: board.py  constants.py
monitor/service/: aggregator_service.py  integration_mapper.py
test/: conftest.py
test/monitor/: test_app.py  test_build_monitor.py  test_cli.py  test_config.py
test/monitor/ci_gateway/: circleci_pipelines.json  circleci_workflows.json  github_response.json  test_circleci.py  test_github.py  test_integrations.py
test/monitor/gpio/: test_board.py
test/monitor/service/: test_aggregator_service.py  test_integration_mapper.py
