[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor"
version = "0.2.1"
description = "GPIO build monitor for CI status LEDs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Matthew Z Worthington", email = "worthingtown@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.14.3,<3.15",
    "typer>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "aioresponses>=0.7.9",
    "build>=1.5.0",
    "pre-commit>=4.6.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-semantic-release>=9.21.0",
    "ruff>=0.15.22",
]

[project.scripts]
monitor = "monitor.__main__:cli"

[project.urls]
Homepage = "https://github.com/worthington10TW/gpio-build-monitor"
Repository = "https://github.com/worthington10TW/gpio-build-monitor"

[tool.setuptools.packages.find]
include = ["monitor", "monitor.*"]
exclude = ["test", "test.*"]

[tool.setuptools.package-data]
monitor = ["integrations.example.json"]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ".venv/bin/python -m build --sdist --wheel"
tag_format = "v{version}"
commit_message = "chore(release): {version}"
allow_zero_version = true

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = ["^chore\\(release\\):"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]

[tool.semantic_release.remote]
type = "github"
